--- a/loudspace/Gemfile
+++ b/loudspace/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+ruby '2.2.2'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
@@ -54,4 +55,5 @@ end
 
 group :production do
 	gem 'pg'
+	gem 'rails_12factor'
 end
